--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <head>
 <title>Shootem 1</title>
 <link rel="stylesheet" type="text/css" href="css/clear.css" />
+<script type="text/javascript" src="js/lib/jquery-1.11.3.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
 <div class="main-container">
 	<div id="cnx-holder">
-		<canvas id="cnx"  width="800" height="480"style=""></canvas>
+		<canvas id="cnx"  width="1000" height="680"style=""></canvas>
 	</div>
 </div>
 </body>
